<resources>
    <string name="app_name">Projet2eme</string>
    <string name="some_error">Some thing went wrong!!</string>
    <string name="login">Login</string>
    <string name="signin">signin</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="email_not_valid">please provide a valid email !!</string>
    <string name="no_internet">please connect to internet first !!</string>
    <string name="password_short">passwword is to short !!</string>
    <string name="email_not_found">user not found please make sure you entre an email of your school</string>
    <string name="signin_failled">signin operation failled</string>
    <string name="not_subscribed_yet">you are not subscribed yet please signin first !!</string>
    <string name="login_failled">login operation failled</string>
    <string name="familly_name">familly name</string>
    <string name="name">name</string>
    <string name="confirm_password">confirme password</string>
    <string name="submit">Submit</string>
    <string name="user_alredy_subscribe">you are alredy subscribed</string>
    <string name="name_empty">name shouldn\'t be empty!!</string>
    <string name="last_name_empty">last name shouldn\'t be empty</string>
    <string name="pass_short">password too short</string>
    <string name="confirm_pass">please confirme password</string>
    <string name="banned_message">if you want to recover your acount or you want know why we suspeded you please contact
        us in this mail support@team7.talebweb.com
    </string>
    <string name="banned_title">you are banned for security reasons</string>
    <string name="confirm_email">confirm</string>
    <string name="code_not_correct">code not correct please try again</string>
    <string name="try_out">you tryed more than 5 times you are know banned</string>
    <string name="confirmation_error">code not confirmed some thing went wrong</string>
    <string name="confirmation_code">confirmation code</string>
    <string name="resend_email">resend</string>
    <string name="confirm_code_not_valid">please entre a valid confirmation code</string>
    <string name="wrong_password">wrong password</string>
    <string name="code_sending_error">somthing went wrong please check your internet connection and try again</string>
    <string name="resend_failled">resend operation failled please check your internet connection and try again</string>
    <string name="resend_code_time_limit">you must wait atleast 3 minute to resend confirmation code</string>
    <string name="confirmation_code_title">please check your email and write the confirmation code</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="reset_pass_des">entre the email address \nassociated with your acount</string>
    <string name="reset_pass_sub_title">we will email you a link to reset your \npassword.</string>
    <string name="entre_email_address">entre email address</string>
    <string name="confirm_desc">entre the verification code we \njust sent you on your\nemail address.</string>
    <string name="reset_resend_email">if you didn\'t receive a code!.</string>
    <string name="resend">RESEND</string>
    <string name="confirm">confirm</string>
    <string name="sign_in_title">we will email you a link to\nconfirm your email</string>
    <string name="sign_in_des">entre the email address </string>
    <string name="reset_pass">you dont remembre your password?</string>
    <string name="rest">rest</string>
    <string name="change_pass">change password</string>
    <string name="entre_new_pass">please entre new \npassword</string>
    <string name="new_pass">new password</string>
    <string name="verification">verification</string>
    <string name="change_pass_title">change your password</string>
    <string name="pass_change_success">password changed successfuly ,you can login with your new password</string>
    <string name="saveingo_fail">operation failled please check your internet connection</string>
    <string name="saveinfo_auther_fail">some thing wrong happend while submiting user informations</string>
    <string name="sendcoe_fail">sending email failed, please check your internet connection and try again</string>
    <string name="reset_email_not_found">sorry we can\'t find any acount associated with provided email</string>
    <string name="reset_email_not_subscribed">this email is not subscribed yet, please signup</string>
    <string name="reset_unknown_prblm">something wrong happend while sending email</string>
    <string name="reset_code_not_correct">confirmation code is not correct please try again</string>
    <string name="reset_oper_fail">something wrong happend please check your internet connection and try again</string>
    <string name="reset_unknown_error">some thing wrong happend while changing password</string>
    <string name="chalenges">Chalenges</string>
    <string name="forume">forume</string>
    <string name="award">awards</string>
    <string name="profile">profile</string>
    <string name="start">start</string>
    <string name="no_chalenge">no chalenges left for today \nplease comeback
        tomorow
    </string>
    <string name="chalenge_cnx_prblm">please check your internet connection and try again</string>
    <string name="banne_tmp">you are banned cheating probleme please cheack tomorow</string>
    <string name="filtering">Filtering</string>
    <string name="filter">filter</string>
    <string name="cancel">cancel</string>
    <string name="help_chalenge">chalenge page</string>
    <string name="help_chalenge_des">here you can find all chalenges availble</string>
    <string name="help_filter">filter</string>
    <string name="help_filter_des">you can filter chalenges here</string>
    <string name="help_module">Module</string>
    <string name="help_module_des">this is the module of chalenge</string>
    <string name="help_start">start chalenges</string>
    <string name="help_start_des">you can start chalenges by clicking here</string>
    <string name="help_points_des">numbre of points of this chalenge</string>
    <string name="help_points">points</string>
    <string name="help_solved">solved</string>
    <string name="help_solved_des">numbre of persone who solved this chalenge</string>
    <string name="help_question_des">numbre of questions iin this chalenge</string>
    <string name="help_question">questions</string>
    <string name="help_profile_des">here you can see you\'r profile and your informations</string>
    <string name="help_profile">Profile page</string>
    <string name="help_award">Award Page</string>
    <string name="help_award_des">here you can collect your rawards</string>
    <string name="help_forum">Forume page</string>
    <string name="help_forum_des">here you can discuss and communicate with auther students</string>
    <string name="start_resource_notice">befor you start this chalenge you should take a lock to the resources provided
        below
    </string>
    <string name="notice_befor_start_chalenge">you should know once you hit start button you can\'t make pause , if the time finish or  numbre of persone who solved this chalenge reach the maximum you will not get the points so you better hurry up and you only have one chance you can\'t try again on this chaleneg are ready for chalenge?</string>
    <string name="points">Points</string>
    <string name="solved">solved</string>
    <string name="question">question</string>
    <string name="time">Time</string>
    <string name="chalenge_not_availible">sorry this chalenge is not availible any more</string>
    <string name="banne_temp">you are acount is suspended temporary due to cheating please try again another time
    </string>
    <string name="chale_detai_op_fail">some thing went wrong please try again later</string>
    <string name="before_start">before you start</string>
    <string name="start_chalenge_trans">start_chalenge_transation</string>
    <string name="next">Next</string>
    <string name="chalneg_solved_msg">chalenge allredy solved by 5 peaple so you can still solve this chaleng but you
        will get no point
    </string>
    <string name="time_finish_msg">time  finish , you can still solve this chaleng but you
        will get no point
    </string>
    <string name="chalneg_solved">challenge solved!!</string>
    <string name="continue_challenge">continue</string>
    <string name="time_finish">time finisg!!</string>
    <string name="chalenge_solved">chalnge allredy solved !! plese try on another chanlenge</string>
    <string name="try_auhet_fail">some thing went wrong please check your internet connection and try again</string>
    <string name="subitting">submitting</string>
    <string name="subiting_msg">we are calculating your note please wait!!</string>
    <string name="chalenge_fail">Good luck next time</string>
    <string name="congrat">Congratulation</string>
    <string name="settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="make_your_acount_private">make your acount private</string>
    <string name="save">Save</string>
    <string name="change_avater">Change Avater</string>
    <string name="saved_succ">information saved successfully</string>
    <string name="total_points">total points :</string>
    <string name="change_your_points_with_this_gift">exchange your points with this gift?</string>
    <string name="confirme">Confirme</string>
    <string name="no_enough_points">you don\'t have enough points ,solve more challenges to get more points</string>
    <string name="close">close</string>
    <string name="chek_email">check your email to get your award</string>
    <string name="not_answerd_title">Not answered !!</string>
    <string name="not_answerd_msg">please answer this question befor passing to next one</string>
    <string name="your_points_desc">here you can find your points</string>
    <string name="your_points_title">Points</string>
    <string name="you_didn_t_solve_any_challenges_yet">You didn\'t solve any challenges yet</string>
    <string name="challenges_solved">Challenges solved</string>
    <string name="settings_desc">you can update you profile info and change settings here</string>
    <string name="settings_title">Settings</string>
    <string name="rank_desc">this rank change every day you need to keep working inorder to keep your rank</string>
    <string name="rank_title">your current rank</string>
    <string name="avatar_title">Avatar</string>
    <string name="avatar_desc">your profile picture</string>
    <string name="challenges_title">number of challenges solved till now</string>
    <string name="point_title">your points</string>
    <string name="desc_title">profile description</string>
    <string name="solvedChallenges_title">all challenges solved by you</string>
    <string name="year_desc">your current year</string>
    <string name="no_chalenges_left">no chalenges left ,please comme back later</string>
    <string name="user_info_failue">cannot get user info check your internet connection</string>
    <string name="error">some thing went wrong</string>
    <string name="send_code_error">cannot send confirmation code please check your internet connection</string>
    <string name="get_true_op_failure">we can\'t connect to serveur please check your internet connection</string>
    <string name="cheater_failure">your been banned because your are cheating</string>
    <string name="comment">Comment</string>
    <string name="this_user_didn_t_specifie_a_description_yet">this user didn\'t specifie a description yet</string>
    <string name="your_rank_in_last_15_days">your rank in last 15 days</string>
    <string name="profile_description">profile description</string>
    <string name="creat_post">Create Post</string>
</resources>